--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=sbg
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root01
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,12 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.hostinger.com.ar
+MAIL_PORT=587
+MAIL_USERNAME=info@fireproject.com.ar
+MAIL_PASSWORD=Jubag1542!
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=info@fireproject.com.ar
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
